[gd_scene load_steps=5 format=3 uid="uid://bbj5ttmos2y6f"]

[ext_resource type="Script" path="res://cards/card.gd" id="1_d6sy8"]
[ext_resource type="TileSet" uid="uid://cw4qphsnprf8y" path="res://assets/paper_tileset.tres" id="1_ucf3r"]
[ext_resource type="Theme" uid="uid://bl2wxp3u6kuhq" path="res://assets/control_theme.tres" id="3_333c7"]
[ext_resource type="Texture2D" uid="uid://cdpn50mx0kev3" path="res://assets/vector icon/Attack.png" id="4_oql1p"]

[node name="Card" type="Node2D"]
script = ExtResource("1_d6sy8")

[node name="Base_Sprite" type="TileMap" parent="."]
texture_filter = 1
scale = Vector2(4, 4)
tile_set = ExtResource("1_ucf3r")
format = 2
layer_0/tile_data = PackedInt32Array(0, 2293760, 1, 65536, 2293760, 2, 131072, 2293760, 3, 196608, 2293760, 4, 1, 2359296, 1, 65537, 2359296, 2, 131073, 2359296, 3, 196609, 2359296, 4, 2, 2424832, 1, 65538, 2424832, 2, 131074, 2424832, 3, 196610, 2424832, 4)

[node name="Common_Sprite" type="TileMap" parent="."]
visible = false
texture_filter = 1
scale = Vector2(4, 4)
tile_set = ExtResource("1_ucf3r")
format = 2
layer_0/tile_data = PackedInt32Array(0, 2293760, 5, 65536, 2293760, 7, 131072, 2293760, 6, 196608, 2293760, 8, 1, 2359296, 5, 65537, 2359296, 6, 131073, 2359296, 7, 196609, 2359296, 8, 2, 2424832, 5, 65538, 2424832, 6, 131074, 2424832, 7, 196610, 2424832, 8)

[node name="Uncommon_Sprite" type="TileMap" parent="."]
visible = false
texture_filter = 1
scale = Vector2(4, 4)
tile_set = ExtResource("1_ucf3r")
format = 2
layer_0/tile_data = PackedInt32Array(0, 2686976, 5, 65536, 2686976, 7, 131072, 2686976, 6, 196608, 2686976, 8, 1, 2752512, 5, 65537, 2752512, 6, 131073, 2752512, 7, 196609, 2752512, 8, 2, 2818048, 5, 65538, 2818048, 6, 131074, 2818048, 7, 196610, 2818048, 8)

[node name="Rare_Sprite" type="TileMap" parent="."]
visible = false
texture_filter = 1
scale = Vector2(4, 4)
tile_set = ExtResource("1_ucf3r")
format = 2
layer_0/tile_data = PackedInt32Array(0, 3145728, 1, 1, 3211264, 1, 2, 3276800, 1, 65536, 3145728, 2, 65537, 3211264, 2, 65538, 3276800, 2, 131072, 3145728, 2, 131073, 3211264, 2, 131074, 3276800, 2, 196608, 3145728, 3, 196609, 3211264, 3, 196610, 3276800, 3)

[node name="EffectIcon" type="Node2D" parent="."]

[node name="Control" type="Control" parent="EffectIcon"]
layout_mode = 3
anchors_preset = 0
offset_right = 192.0
offset_bottom = 256.0
mouse_filter = 1
theme = ExtResource("3_333c7")
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="EffectIcon/Control"]
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Pair1" type="HBoxContainer" parent="EffectIcon/Control/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="key" type="TextureRect" parent="EffectIcon/Control/VBoxContainer/Pair1"]
layout_mode = 2
texture = ExtResource("4_oql1p")
expand_mode = 2
stretch_mode = 5

[node name="value" type="Label" parent="EffectIcon/Control/VBoxContainer/Pair1"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 36
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Pair2" type="HBoxContainer" parent="EffectIcon/Control/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="key" type="TextureRect" parent="EffectIcon/Control/VBoxContainer/Pair2"]
layout_mode = 2
texture = ExtResource("4_oql1p")
expand_mode = 2
stretch_mode = 5

[node name="value" type="Label" parent="EffectIcon/Control/VBoxContainer/Pair2"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 36
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Pair3" type="HBoxContainer" parent="EffectIcon/Control/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="key" type="TextureRect" parent="EffectIcon/Control/VBoxContainer/Pair3"]
layout_mode = 2
texture = ExtResource("4_oql1p")
expand_mode = 2
stretch_mode = 5

[node name="value" type="Label" parent="EffectIcon/Control/VBoxContainer/Pair3"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 36
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Pair4" type="HBoxContainer" parent="EffectIcon/Control/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="key" type="TextureRect" parent="EffectIcon/Control/VBoxContainer/Pair4"]
layout_mode = 2
texture = ExtResource("4_oql1p")
expand_mode = 2
stretch_mode = 5

[node name="value" type="Label" parent="EffectIcon/Control/VBoxContainer/Pair4"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 36
text = "3"
horizontal_alignment = 1
vertical_alignment = 1
